<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:padding="10dp"
    android:background="#ffffff">

    <TextView
        android:id="@+id/picking_total_item_text_goods_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/goods_code"
        android:textColor="#504f4f"
        android:textSize="13sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/picking_total_item_text_goods_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/goods_name"
        android:textColor="#504f4f"
        android:textSize="13sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/picking_total_item_text_order_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/order_count"
        android:textColor="#504f4f"
        android:textSize="13sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/picking_total_item_text_picking_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/picking_count"
        android:textColor="#504f4f"
        android:textSize="13sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/picking_total_item_text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/loc"
        android:textColor="#504f4f"
        android:textSize="13sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/picking_total_item_text_plt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/pltid"
        android:textColor="#504f4f"
        android:textSize="13sp"
        android:layout_weight="1"/>

</LinearLayout>