<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:padding="10dp"
    android:background="#ffffff">

    <TextView
        android:id="@+id/loc_inquiry_item_text_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/goods"
        android:textColor="#504f4f"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/loc_inquiry_item_text_goods_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/goods_state"
        android:textColor="#504f4f"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/loc_inquiry_item_text_inventory_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/inventory_count"
        android:textColor="#504f4f"
        android:textSize="15sp"
        android:textAlignment="textEnd"/>

</LinearLayout>